--- a/guides/getting-started/setup-and-installation.mdx
+++ b/guides/getting-started/setup-and-installation.mdx
@@ -1,271 +1,300 @@
 ---
 title: "Setup and Installation"
-description: "Learn how to install GoogleTest and GoogleMock using popular build systems like CMake and Bazel, integrate the framework into your project, and verify your environment is ready for testing. Includes tips for troubleshooting common setup issues."
+description: "A step-by-step walkthrough covering how to install GoogleTest/GoogleMock, configure your build system with CMake or Bazel, and include the necessary headers. Best practices for integrating into new or existing C++ projects ensure a smooth initial experience."
 ---
 
-# Setup and Installation
-
-## Overview
-
-This guide walks you through installing **GoogleTest** and **GoogleMock** using popular C++ build systems like **CMake** and **Bazel**. It covers how to integrate these testing frameworks into your projects properly and verify your environment is correctly configured for testing. Whether you're beginning or adding GoogleTest/GoogleMock to an existing project, this guide ensures you understand installation steps, integration tips, and how to troubleshoot common setup issues.
+# Setup and Installation Guide for GoogleTest and GoogleMock
 
 ---
 
-## Prerequisites
+## 1. Workflow Overview
 
-Before beginning installation, ensure the following prerequisites:
+**What this Guide Achieves**
 
-- You have a supported **C++17** compatible compiler (e.g., GCC, Clang, MSVC).
-- Your operating system supports GoogleTest (Linux, Windows, Mac).
-- For **CMake** builds, you have **CMake 3.14+** installed.
-- You have a working build environment (make, Visual Studio, etc.).
-- (Optional) For Bazel, you have Bazel installed and configured.
+This guide walks you through installing GoogleTest and GoogleMock, configuring your C++ build environment using either CMake or Bazel, and correctly including the necessary headers. It equips you with best practices to integrate these testing frameworks into new or existing projects for a seamless testing setup.
 
-Refer to the [Prerequisites & System Requirements](../getting-started/setup-and-installation/prerequisites-system-requirements) page for detailed system compatibility and compiler requirements.
+**Prerequisites**
 
----
+- A C++17-compliant compiler and compatible build tools installed.
+- Basic familiarity with CMake or Bazel build systems.
+- Access to the GoogleTest repository (https://github.com/google/googletest).
+- Optional: Installed CMake (3.13 or newer recommended) or Bazel.
 
-## Installation Options
+**Expected Outcome**
 
-### 1. Installing with CMake
+You will have GoogleTest and GoogleMock built and integrated into your project, with properly included headers and linked libraries. This will enable writing, building, and running C++ tests with Google’s testing frameworks immediately.
 
-You can build GoogleTest and GoogleMock either as a standalone project or incorporate them into your existing CMake-based project.
+**Estimated Time**
 
-#### A. Standalone Build
+15 to 30 minutes depending on environment setup and build times.
 
-1. Clone the GoogleTest repository:
+**Difficulty Level**
 
-    ```bash
-    git clone https://github.com/google/googletest.git -b main
-    cd googletest
-    mkdir build && cd build
-    ```
-
-2. Configure the build with CMake:
-
-    - To build GoogleTest **with GoogleMock** (default):
-
-      ```bash
-      cmake ..
-      ```
-
-    - To build **only GoogleTest** (disable GoogleMock):
-
-      ```bash
-      cmake .. -DBUILD_GMOCK=OFF
-      ```
-
-3. Build the libraries:
-
-    ```bash
-    make    # or using your platform's native build command
-    ```
-
-4. (Optional) Install globally:
-
-    ```bash
-    sudo make install
-    ```
-
-#### B. Integrating into Existing CMake Project
-
-Add GoogleTest as a subdirectory in your `CMakeLists.txt`:
-
-```cmake
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/main.zip
-)
-# For Windows compatibility
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
-
-add_executable(your_test your_test.cpp)
-target_link_libraries(your_test gtest_main)
-add_test(NAME your_test COMMAND your_test)
-```
-
-This method ensures your project and GoogleTest share the same compiler/linker settings.
+Beginner to Intermediate (suitable for developers comfortable with C++ build tools).
 
 ---
 
-### 2. Installing with Bazel
+## 2. Step-by-Step Installation and Setup
 
-GoogleTest and GoogleMock support Bazel builds. To add GoogleTest to your Bazel project:
+### Step 1: Obtain GoogleTest and GoogleMock Source Code
 
-1. Add GoogleTest as an external dependency in your `WORKSPACE` file:
-
-```python
-http_archive(
-    name = "com_google_googletest",
-    url = "https://github.com/google/googletest/archive/main.zip",
-    strip_prefix = "googletest-main",
-)
-```
-
-2. In your `BUILD` files, depend on GoogleTest targets, for example:
-
-```python
-cc_test(
-    name = "my_test",
-    srcs = ["my_test.cc"],
-    deps = ["@com_google_googletest//:gtest_main"],
-)
-```
-
-3. Build and run tests with Bazel commands:
+- Clone the repository with both GoogleTest and GoogleMock:
 
 ```bash
-bazel build //path/to:my_test
-bazel test //path/to:my_test
+  git clone https://github.com/google/googletest.git
+  cd googletest
 ```
 
-Refer to Bazel documentation for more advanced usage.
+- Optionally, checkout a stable tag or branch:
 
----
+```bash
+  git checkout main
+```
 
-## Configuration and Verification
+### Step 2: Prepare Your Build Environment
 
-Once GoogleTest and GoogleMock are installed into your project, you must integrate and verify the setup:
+- Confirm your compiler supports C++17 standard.
+- Make sure CMake (version 3.13 or above) is installed if you plan to use it.
+- Verify Bazel installation if using Bazel as your build system.
 
-### Include Directories
+### Step 3: Building with CMake
 
-Add include paths to your compiler options, e.g.,
+#### 3.1: Standalone Build
+
+- Create and navigate to your build directory:
+
+```bash
+  mkdir build
+  cd build
+```
+
+- Run CMake to configure the build:
+
+```bash
+  cmake ..
+```
+
+  - This default setup includes both GoogleTest and GoogleMock.
+  - To build GoogleTest only, add `-DBUILD_GMOCK=OFF` flag:
+
+```bash
+  cmake .. -DBUILD_GMOCK=OFF
+```
+
+#### 3.2: Build and Install
+
+- Build the project:
+
+```bash
+  make
+```
+
+- Optionally, install system-wide (requires administrator privileges):
+
+```bash
+  sudo make install
+```
+
+##### Notes:
+- On Windows, Visual Studio solution files (`.sln`) are generated.
+- On macOS, an Xcode project file (`.xcodeproj`) is generated.
+
+#### 3.3: Integrate GoogleTest into Your Existing CMake Project
+
+- Use `find_package(GTest CONFIG REQUIRED)` if libraries are installed on your system.
+- Alternatively, add GoogleTest as a subdirectory to your project:
 
 ```cmake
-target_include_directories(your_test PRIVATE path/to/googletest/include)
+  add_subdirectory(path/to/googletest)
+  target_link_libraries(your_test_target PRIVATE gtest gmock)
 ```
 
-### Linking Libraries
-
-Link against `gtest`, `gmock`, and their `main` variants (which contain default `main()` implementations):
-
-- Use `gtest_main` or `gmock_main` to avoid writing your own `main()`.
-- If providing your own `main()`, link to `gtest` and `gmock` instead.
-
-Example:
+- Ensure your targets compile with C++17:
 
 ```cmake
-target_link_libraries(your_test gtest_main gmock)
+  set(CMAKE_CXX_STANDARD 17)
+  set(CMAKE_CXX_STANDARD_REQUIRED ON)
 ```
 
-### Verifying Installation
+### Step 4: Building with Bazel
 
-Write and compile a basic test to ensure the frameworks are ready:
+- Add googletest source as an external dependency or workspace repository.
+- Load relevant Bazel targets for `gtest` and `gmock`.
+- Link your test targets against `@com_google_googletest//:gtest_main` or `gmock_main`.
 
-```c++
+### Step 5: Include Headers in Your Test Code
+
+- Add the following includes in your test source files:
+
+```cpp
 #include <gtest/gtest.h>
+#include <gmock/gmock.h>  // only if you use GoogleMock features
+```
 
-TEST(SanityCheck, TestTrue) {
-    EXPECT_TRUE(true);
-}
+- Ensure your compiler include path contains the GoogleTest and GoogleMock headers, typically from `googletest/include` and `googlemock/include`.
 
-int main(int argc, char** argv) {
-    ::testing::InitGoogleTest(&argc, argv);
-    return RUN_ALL_TESTS();
+### Step 6: Link Correct Libraries
+
+- When compiling your tests, link against the `gtest`, `gtest_main`, `gmock`, or `gmock_main` libraries as appropriate:
+
+| Use Case                 | Libraries to Link               |
+|--------------------------|--------------------------------|
+| GoogleTest only           | `gtest` or `gtest_main`         |
+| GoogleMock with main()    | `gmock_main`                   |
+| GoogleMock without main() | `gmock` and your own main()     |
+
+### Step 7: Initialize GoogleTest/GoogleMock in Your Main Function
+
+- Normally, you do not need to write your own `main()`; linking with `gtest_main` or `gmock_main` provides it.
+- If you write a custom `main()`, use the following initialization:
+
+```cpp
+int main(int argc, char **argv) {
+  testing::InitGoogleMock(&argc, argv); // for GoogleMock
+  // or
+  testing::InitGoogleTest(&argc, argv); // for GoogleTest only
+  return RUN_ALL_TESTS();
 }
 ```
 
-Build and run this; success indicates proper installation.
+### Step 8: Build and Run Your Tests
 
-Refer to [Configuration & Verification](../getting-started/setup-and-installation/configuration-verification) for detailed instructions.
-
----
-
-## Troubleshooting Common Setup Issues
-
-### Common Problems
-
-| Issue                        | Solution                                                                                 |
-|------------------------------|-----------------------------------------------------------------------------------------|
-| Compilation errors            | Confirm compiler supports C++17; verify include and library paths; check macro usage.  |
-| Linking errors                | Ensure correct libraries linked (`gtest`, `gmock`, `pthread` on Unix systems).          |
-| `main()` multiple definitions | Link with either `gtest_main`/`gmock_main` or supply your own `main()`, but not both.   |
-| Build system incompatibilities| Check build script matches GoogleTest build instructions; update CMake/Bazel versions. |
-| Platform-specific issues      | Review system prerequisites; apply required flags as per [Prerequisites](../getting-started/setup-and-installation/prerequisites-system-requirements).|
-
-### Tips
-
-- Use `testing::InitGoogleTest()` or `testing::InitGoogleMock()` properly to initialize testing frameworks.
-- Check for CMake variable conflicts or outdated configurations.
-- When upgrading GoogleTest, clean build directories to avoid stale artifacts.
-
-If problems persist, consult the [Troubleshooting & Common Issues](../getting-started/first-test-experience/troubleshooting-and-common-issues) guide.
+- Build your test executable using your build system.
+- Run the tests; the framework will discover and execute all registered tests.
 
 ---
 
-## Best Practices & Tips
+## 3. Practical Tips and Best Practices
 
-- Prefer linking to `gtest_main` or `gmock_main` to avoid writing boilerplate `main()`.
-- Use CMake `FetchContent` or git submodules to keep GoogleTest sources updated.
-- Lock your GoogleTest dependency to a specific version or commit hash to control changes.
-- Verify that your build environment matches GoogleTest system requirements.
-- Suppress compiler/linker warnings by enabling recommended flags.
-
----
-
-## Summary
-
-By following this guide, you will install GoogleTest and GoogleMock using CMake or Bazel, integrate them into your C++ projects, and validate the setup with a sample test. You will also learn to troubleshoot common installation and configuration issues effectively.
+- **Always enforce C++17** to avoid compatibility issues.
+- **Use `gmock_main` library** if you want automatic `main()` with GoogleMock test runs.
+- Avoid mixing `gmock_main` and `gtest_main` libraries; pick the one suitable for your needs.
+- Link your tests only once; multiple linkage with incompatible runtime libraries will cause errors.
+- When including GoogleMock, always include `<gmock/gmock.h>` before your test code.
+- For better portability and ease of use, integrate GoogleTest as a subdirectory in CMake projects rather than installing globally.
+- CMake option `gtest_force_shared_crt` can help resolve runtime linkage issues on Windows Visual Studio.
+- Use `make test` or `ctest` to run tests when building standalone GoogleTest.
 
 ---
 
-## Additional Resources
+## 4. Troubleshooting Common Issues
 
-- [Prerequisites & System Requirements](../getting-started/setup-and-installation/prerequisites-system-requirements)
-- [Configuration & Verification](../getting-started/setup-and-installation/configuration-verification)
-- [Writing Your First Test](../getting-started/first-test-experience/writing-your-first-test)
-- [Troubleshooting & Common Issues](../getting-started/first-test-experience/troubleshooting-and-common-issues)
-- [GoogleTest on GitHub](https://github.com/google/googletest)
-- [GoogleTest Documentation Home](../index.md)
+### C++ Standard Errors
+
+> Errors like ‘no matching function’ or missing definitions
+
+- Ensure your compiler is invoked with the flag to enable `-std=c++17` or equivalent.
+- Confirm `CMAKE_CXX_STANDARD` is set properly in your build system.
+
+### Linking Errors
+
+> Undefined references related to `gtest` or `gmock`
+
+- Verify you linked against the correct static or shared libraries (`-lgtest`, `-lgmock`, etc).
+- For GoogleMock tests using automatic `main()`, link with `gmock_main`.
+- Avoid mixing debug and release libraries.
+
+### Missing Headers
+
+- Confirm include directories point to `googletest/include` and `googlemock/include`.
+- Ensure your editor or build system knows about the GoogleTest source location.
+
+### Multiple Definitions of main()
+
+- This occurs if you link both `gtest_main` and define your own `main()`.
+- Use only one: either link `gtest_main`/`gmock_main` or provide your own `main()`.
+
+### Platform-Specific Caveats
+
+- For Windows, dynamic versus static runtime library mismatches cause link errors. Use `gtest_force_shared_crt` option.
+- For embedded or special platforms (ESP32, Arduino), initialization is done in `setup()` function.
 
 ---
 
-## Example: Minimal CMakeLists.txt Integrating GoogleTest
+## 5. Related Documentation and Next Steps
+
+- After installation, explore [Writing and Running Your First Test](../first-test-and-validation/writing-and-running-first-test) to create your initial tests.
+- For detailed platform support and integration, see [Integration and Platforms](../../overview/features-integration/integration-and-platforms).
+- Consult [Configuration and Initial Setup](./configuration-and-initial-setup) for detailed build system integration guidance.
+- To troubleshoot issues, review [Troubleshooting Common Setup Issues](../first-test-and-validation/troubleshooting-common-issues).
+- For mocking techniques, refer to [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) and related gMock guides.
+
+---
+
+## 6. Summary Diagram of the Setup Workflow
+
+```mermaid
+flowchart TD
+  A[Start: Get googletest source code] --> B{Choose Build System}
+  B -->|CMake| C[Create build directory]
+  B -->|Bazel| D[Configure Bazel workspace]
+  C --> E[Run cmake .. to generate build files]
+  E --> F[Run make or build command]
+  F --> G[Install libraries (optional)]
+  G --> H[Include headers in your test files]
+  D --> I[Write BUILD files and link dependencies]
+  I --> H
+  H --> J[Link correct gtest/gmock libraries]
+  J --> K[Write or link main() function]
+  K --> L[Build your test executable]
+  L --> M[Run tests with RUN_ALL_TESTS()]
+  M --> N[End: GoogleTest/GoogleMock ready]
+
+  classDef decision fill:#f96,stroke:#333,stroke-width:2px;
+  class B decision;
+```
+
+---
+
+## 7. Example CMakeLists.txt Snippet for GoogleMock Integration
 
 ```cmake
-cmake_minimum_required(VERSION 3.14)
-project(ExampleTestProject CXX)
+cmake_minimum_required(VERSION 3.13)
+project(MyProject CXX)
 
-# Enable FetchContent module
-include(FetchContent)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Declare and fetch GoogleTest
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/refs/heads/main.zip
-)
-FetchContent_MakeAvailable(googletest)
+add_subdirectory(path/to/googletest)
 
-# Add test executable
-add_executable(my_test test.cpp)
+add_executable(MyTests test_main.cpp my_test1.cpp my_test2.cpp)
 
-# Link with GoogleTest and GoogleMock
-target_link_libraries(my_test gtest_main gmock)
+target_link_libraries(MyTests PRIVATE gmock_main)
 
-# Enable testing and add test
 enable_testing()
-add_test(NAME my_test COMMAND my_test)
+add_test(NAME MyTests COMMAND MyTests)
 ```
+
+Replace `path/to/googletest` with the relative or absolute path to the GoogleTest source.
 
 ---
 
-## Example: Minimal Test Source (test.cpp)
+## 8. Example Basic main.cc Using GoogleMock
 
-```c++
-#include <gtest/gtest.h>
-
-TEST(SimpleTest, AlwaysPasses) {
-    EXPECT_TRUE(true);
-}
+```cpp
+#include <gmock/gmock.h>
 
 int main(int argc, char** argv) {
-    ::testing::InitGoogleTest(&argc, argv);
-    return RUN_ALL_TESTS();
+  ::testing::InitGoogleMock(&argc, argv);
+  return RUN_ALL_TESTS();
 }
 ```
 
-Build and run this simple test to confirm your setup.
+Use this if you are not linking with `gmock_main`.
 
 ---
+
+## 9. Summary and Best Practices Checklist
+
+- Confirm C++17 compiler support.
+- Choose your build system: CMake or Bazel.
+- Use `gmock_main` for automatic `main()` if using GoogleMock.
+- Add GoogleTest and GoogleMock include directories to your compiler includes.
+- Link test executables to appropriate libraries.
+- Call `InitGoogleMock` or `InitGoogleTest` before `RUN_ALL_TESTS()` if you provide your own `main()`.
+- Verify your test program compiles and runs sample tests to confirm setup.
+- For platform-specific issues, consult platform support documentation.
+
+---
+
+For the full experience, continue with the [Writing and Running Your First Test](../first-test-and-validation/writing-and-running-first-test) guide.
