--- a/api-reference/core-testing-api/assertions-api.mdx
+++ b/api-reference/core-testing-api/assertions-api.mdx
@@ -1,228 +1,242 @@
 ---
-title: "Assertions API"
-description: "Comprehensive guide to all built-in GoogleTest assertions, including equality, floating point, string, and exception assertions. Describes fatal vs. non-fatal failures, custom assertion authoring, and usage with code examples to help users verify program correctness at every point."
+title: "Assertions and Expectation Macros"
+description: "Comprehensive documentation for all assertion macros provided by GoogleTest, including core, fatal, non-fatal, and user-defined assertions. Covers value assertions, death tests, exception checks, and best practices for readable, robust tests."
 ---
 
-# Assertions API
+# Assertions and Expectation Macros
 
-Comprehensive guide to all built-in GoogleTest assertions, including equality, floating point, string, and exception assertions. Describes fatal vs. non-fatal failures, custom assertion authoring, and usage with code examples to help users verify program correctness at every point.
+Comprehensive documentation for all assertion macros provided by GoogleTest, including core, fatal, non-fatal, and user-defined assertions. Covers value assertions, death tests, exception checks, and best practices for readable, robust tests.
 
 ---
 
-## Overview of GoogleTest Assertions
+## Overview
 
-GoogleTest provides a rich set of assertion macros for verifying your program's correctness at every point of execution. These assertions form the backbone of writing reliable, readable, and maintainable tests. They range from simple boolean checks to complex predicate assertions that improve test expressiveness and diagnostic clarity.
+GoogleTest offers a broad suite of macro-based assertions to verify your C++ code's behavior in tests. These assertions allow you to specify expected conditions, producing detailed messages and test failure reports when those conditions are not met. Assertions come in pairs: `EXPECT_` macros which generate nonfatal failures (allowing test continuation) and `ASSERT_` macros which generate fatal failures (immediately aborting the current test).
 
-Assertions come in pairs:
+Using assertions effectively is key to writing readable, maintainable, and robust tests. They help you express expectations clearly, diagnose failures quickly, and improve test reliability.
 
-- **EXPECT_***: Generate non-fatal failures allowing tests to continue and report multiple failures.
-- **ASSERT_***: Generate fatal failures that abort the current function immediately.
+---
 
-Use `EXPECT_*` when you want your test to continue after failure and `ASSERT_*` when continuation is unsafe or meaningless.
+## Assertion Categories
 
+### 1. Explicit Success and Failure
 
-## Types of Assertions
+These assertions generate explicit success or failure without evaluating any Boolean expression. They help control test flow when the pass or fail decision depends on conditions outside of a simple Boolean check.
 
-### 1. Boolean Conditions
+- `SUCCEED()`
+  - Generates a success status.
+  - Does not force a passing test but records that the flow reached a successful check.
 
-- `EXPECT_TRUE(condition)` / `ASSERT_TRUE(condition)`: Verifies that the condition is true.
-- `EXPECT_FALSE(condition)` / `ASSERT_FALSE(condition)`: Verifies that the condition is false.
+- `FAIL()`
+  - Generates a fatal failure, immediately aborting the current function.
+  - Useful when control flow determines the failure, e.g., in a default case in a switch statement.
 
+- `ADD_FAILURE()`
+  - Generates a nonfatal failure, allowing the test to continue.
 
-### 2. Equality and Relational Assertions
+- `ADD_FAILURE_AT(file, line)`
+  - Generates a nonfatal failure reported at a specific file and line number.
 
-For comparing values, including pointers and primitive types. GoogleTest prints actual and expected values for easier debugging.
-
-- `EXPECT_EQ(val1, val2)` / `ASSERT_EQ(val1, val2)`: Checks if `val1 == val2`.
-- `EXPECT_NE(val1, val2)` / `ASSERT_NE(val1, val2)`: Checks if `val1 != val2`.
-- `EXPECT_LT(val1, val2)` / `ASSERT_LT(val1, val2)`: Checks if `val1 < val2`.
-- `EXPECT_LE(val1, val2)` / `ASSERT_LE(val1, val2)`: Checks if `val1 <= val2`.
-- `EXPECT_GT(val1, val2)` / `ASSERT_GT(val1, val2)`: Checks if `val1 > val2`.
-- `EXPECT_GE(val1, val2)` / `ASSERT_GE(val1, val2)`: Checks if `val1 >= val2`.
-
-
-### 3. String Assertions
-
-Designed specifically for comparing C strings and wide strings. They check string content, not pointer equality.
-
-- `EXPECT_STREQ(str1, str2)` / `ASSERT_STREQ(str1, str2)`: Verifies string equality.
-- `EXPECT_STRNE(str1, str2)` / `ASSERT_STRNE(str1, str2)`: Verifies string inequality.
-- `EXPECT_STRCASEEQ(str1, str2)` / `ASSERT_STRCASEEQ(str1, str2)`: Case-insensitive equality.
-- `EXPECT_STRCASENE(str1, str2)` / `ASSERT_STRCASENE(str1, str2)`: Case-insensitive inequality.
-
-**Example:**
+#### Example
 ```cpp
-EXPECT_STREQ("hello", foo.getString()) << "The string did not match";
-```
-
-
-### 4. Floating-Point Comparisons
-
-These handle the imprecision inherent in floating-point computations, comparing two values within a tolerance or ULP (units in the last place) range.
-
-- `EXPECT_FLOAT_EQ(val1, val2)` / `ASSERT_FLOAT_EQ(val1, val2)`: `float` comparison within 4 ULPs.
-- `EXPECT_DOUBLE_EQ(val1, val2)` / `ASSERT_DOUBLE_EQ(val1, val2)`: `double` comparison within 4 ULPs.
-- `EXPECT_NEAR(val1, val2, abs_error)` / `ASSERT_NEAR(val1, val2, abs_error)`: Checks that the absolute difference is within `abs_error`.
-
-**Example:**
-```cpp
-EXPECT_NEAR(calculatePiEstimate(), 3.14159, 0.0001);
-```
-
-
-### 5. Predicate Assertions
-
-When complex verification is needed beyond simple comparisons, predicate assertions allow writing custom logic with clear failure messages.
-
-- `EXPECT_PRED1(pred, val)` / `ASSERT_PRED1(pred, val)`
-- `EXPECT_PRED2(pred, val1, val2)` / `ASSERT_PRED2(pred, val1, val2)`
-- ... up to 5 parameters.
-
-They accept boolean predicates or functors.
-
-Furthermore, predicate formatter variants allow detailed custom failure messages:
-
-- `EXPECT_PRED_FORMAT1(pred_formatter, val)` / `ASSERT_PRED_FORMAT1(pred_formatter, val)`
-- ... up to 5 parameters.
-
-**Example predicate function using AssertionResult:**
-```cpp
-testing::AssertionResult IsEven(int n) {
-  if ((n % 2) == 0)
-    return testing::AssertionSuccess();
-  else
-    return testing::AssertionFailure() << n << " is odd";
+switch(expression) {
+  case 1:
+    ... // some checks
+    break;
+  default:
+    FAIL() << "Unexpected case encountered.";
 }
 ```
 
-**Usage:**
-```cpp
-EXPECT_PRED1(IsEven, value);
-```
-
-
-### 6. Exception Assertions
-
-Check for expected exceptions thrown by code snippets, helps ensure robustness.
-
-- `EXPECT_THROW(statement, exception_type)` / `ASSERT_THROW(statement, exception_type)`
-- `EXPECT_ANY_THROW(statement)` / `ASSERT_ANY_THROW(statement)`
-- `EXPECT_NO_THROW(statement)` / `ASSERT_NO_THROW(statement)`
-
-
-### 7. Explicit Success and Failure
-
-For indicating unconditional success or failure:
-
-- `SUCCEED()`: Records an explicit success.
-- `FAIL()`: Generates a fatal failure and aborts the current function.
-- `ADD_FAILURE()`: Non-fatal failure.
-
-
-### 8. Generalized Assertions (Matchers)
-
-Use GoogleMock's generalized matcher-based assertions for expressive checks:
+### 2. Generalized Assertions Using Matchers
 
 - `EXPECT_THAT(value, matcher)` / `ASSERT_THAT(value, matcher)`
+  - Verify that a value satisfies a matcher condition.
+  - Matchers are expressive predicates that produce helpful failure messages.
+  - Allows complex conditions like string prefixes, regex, numeric ranges, container contents, and user-defined conditions.
 
-Match values against matchers like `HasSubstr()`, `Contains()`, `StartsWith()`, `MatchesRegex()`, and custom matchers.
-
-**Example:**
+#### Example
 ```cpp
-EXPECT_THAT(my_string, StartsWith("Hello"));
-EXPECT_THAT(numbers, ElementsAre(1, 2, _, 4));
+EXPECT_THAT(my_str, StartsWith("Hello"));
+ASSERT_THAT(number, AllOf(Gt(5), Lt(10)));
 ```
 
+See the [Matchers Reference](reference/matchers.md) for a wide library of matchers and instructions on creating custom ones.
 
-## Fatal vs. Non-fatal Failures
+### 3. Boolean Conditions
 
-- **Fatal failure** (from `ASSERT_*`): Aborts the current function, useful when further execution might cause undefined behavior.
-- **Non-fatal failure** (from `EXPECT_*`): Records failure but allows the current function to continue for more checks.
+- `EXPECT_TRUE(condition)` / `ASSERT_TRUE(condition)`
+- `EXPECT_FALSE(condition)` / `ASSERT_FALSE(condition)`
 
-Choose `ASSERT_*` for critical preconditions and `EXPECT_*` for softer checks.
+These assert that a Boolean expression evaluates to true or false, respectively.
 
+### 4. Binary Comparison Assertions
 
-## Streaming Custom Messages
+Check relationships between two comparable values. Use these to verify equality, inequality, ordering, etc.
 
-You can add debugging context by streaming a custom message after the assertion macro:
+- `EXPECT_EQ(val1, val2)` / `ASSERT_EQ(val1, val2)` — test `val1 == val2`
+- `EXPECT_NE(val1, val2)` / `ASSERT_NE(val1, val2)` — test `val1 != val2`
+- `EXPECT_LT(val1, val2)` / `ASSERT_LT(val1, val2)` — test `val1 < val2`
+- `EXPECT_LE(val1, val2)` / `ASSERT_LE(val1, val2)` — test `val1 <= val2`
+- `EXPECT_GT(val1, val2)` / `ASSERT_GT(val1, val2)` — test `val1 > val2`
+- `EXPECT_GE(val1, val2)` / `ASSERT_GE(val1, val2)` — test `val1 >= val2`
+
+**Special notes:**
+- For pointers, tests are by pointer equality, not pointed-to value.
+- For C strings, prefer `EXPECT_STREQ` and related string comparison macros.
+
+### 5. String Comparison Assertions
+
+Compare C strings (`const char*`) or wide C strings (`wchar_t*`) by content, ignoring or respecting case.
+
+- `EXPECT_STREQ(str1, str2)` / `ASSERT_STREQ(str1, str2)` — expect strings to be equal
+- `EXPECT_STRNE(str1, str2)` / `ASSERT_STRNE(str1, str2)` — expect strings to be not equal
+- `EXPECT_STRCASEEQ(str1, str2)` / `ASSERT_STRCASEEQ(str1, str2)` — expect strings to be equal ignoring case
+- `EXPECT_STRCASENE(str1, str2)` / `ASSERT_STRCASENE(str1, str2)` — expect strings to differ ignoring case
+
+### 6. Floating-Point Comparison Assertions
+
+Due to rounding and representation, direct equality may fail unexpectedly with floats and doubles. GoogleTest provides approximate equality assertions based on Units in the Last Place (ULPs) and absolute difference measures.
+
+- `EXPECT_FLOAT_EQ(val1, val2)` / `ASSERT_FLOAT_EQ(val1, val2)` — approximately equal `float`
+- `EXPECT_DOUBLE_EQ(val1, val2)` / `ASSERT_DOUBLE_EQ(val1, val2)` — approximately equal `double`
+- `EXPECT_NEAR(val1, val2, abs_error)` / `ASSERT_NEAR(val1, val2, abs_error)` — difference no greater than `abs_error`
+
+### 7. Exception Assertions
+
+Test that a piece of code throws or does not throw exceptions.
+
+- `EXPECT_THROW(statement, exception_type)` / `ASSERT_THROW(statement, exception_type)` — expect a particular exception type
+- `EXPECT_ANY_THROW(statement)` / `ASSERT_ANY_THROW(statement)` — expect any exception
+- `EXPECT_NO_THROW(statement)` / `ASSERT_NO_THROW(statement)` — expect no exception thrown
+
+Useful for verifying exception safety and error handling code.
+
+### 8. Predicate Assertions
+
+Allow checking arbitrary predicates (functions or functors) with arguments, providing custom failure messages.
+
+- `EXPECT_PREDn(pred, val1, val2, ..., valn)` / `ASSERT_PREDn(pred, val1, val2, ..., valn)` — test predicate of n arguments
+- `EXPECT_PRED_FORMATn(formatter, val1, ..., valn)` / `ASSERT_PRED_FORMATn(formatter, val1, ..., valn)` — allow custom formatted failure messages
+
+### 9. Windows HRESULT Assertions
+
+Special assertions for testing `HRESULT` values on Windows platforms.
+
+- `EXPECT_HRESULT_SUCCEEDED(expression)` / `ASSERT_HRESULT_SUCCEEDED(expression)` — verify success code
+- `EXPECT_HRESULT_FAILED(expression)` / `ASSERT_HRESULT_FAILED(expression)` — verify failure code
+
+### 10. Death Assertions
+
+Verify that a statement causes the process to terminate with an expected error and optionally matching output.
+
+- `EXPECT_DEATH(statement, matcher)` / `ASSERT_DEATH(statement, matcher)`
+- `EXPECT_DEATH_IF_SUPPORTED(statement, matcher)` / `ASSERT_DEATH_IF_SUPPORTED(statement, matcher)`
+- `EXPECT_DEBUG_DEATH(statement, matcher)` / `ASSERT_DEBUG_DEATH(statement, matcher)`
+- `EXPECT_EXIT(statement, predicate, matcher)` / `ASSERT_EXIT(statement, predicate, matcher)`
+
+Requirements depend on platform support and build configuration.
+
+---
+
+## Best Practices
+
+- Prefer `EXPECT_` macros when you want tests to continue after failure, and `ASSERT_` macros when an assertion failure invalidates subsequent code.
+- Use expressive matchers with `EXPECT_THAT` and related macros for clearer intent and diagnostics.
+- Avoid over-specification: specify only the conditions your test cares about.
+- Use nonfatal failures (`EXPECT_`) to collect multiple failures in a single test run.
+- Use custom predicates and predicate-format assertions for complex conditions and improved failure messages.
+- Ensure exception assertions are used only when exceptions are enabled in your build.
+- Use death tests thoughtfully, as they spawn subprocesses and may increase test runtime.
+
+---
+
+## Examples
+
+### Basic Value Assertions
 
 ```cpp
-EXPECT_EQ(value, expected) << "Failure at index " << i;
-```
+TEST(FooTest, BasicAssertions) {
+  int result = ComputeValue();
 
-GoogleTest will append this message to the assertion failure output.
+  EXPECT_EQ(result, 42) << "Result should be the answer to life.";
+  ASSERT_NE(result, 0) << "Result must not be zero.";
 
-
-## Best Practices and Tips
-
-- Use `EXPECT_*` unless you must abort the test early.
-- Compare floating point with `EXPECT_FLOAT_EQ` or `EXPECT_NEAR` instead of `EXPECT_EQ`.
-- Use `EXPECT_STREQ` when comparing C strings, not `EXPECT_EQ`.
-- Use predicate or matcher assertions to improve failure diagnostics for complex conditions.
-- Use `SCOPED_TRACE` to add contextual information in deeply nested test logic, making failures easier to trace.
-- For exception testing, verify the exact exception type and message where appropriate.
-
-
-## Common Pitfalls
-
-- Don't use `ASSERT_*` in functions returning non-void; fatal assertions can only be used in void-returning functions.
-- When testing private code, use `FRIEND_TEST` or test public interfaces.
-- Avoid overly strict expectations with too many `EXPECT_CALL`s (in mocking) unless explicitly verifying call counts or orders.
-- Remember that `EXPECT_EQ` on pointers compares addresses, not pointed-to contents.
-
-
-## Sample Code Examples
-
-### Equality Assertion Example
-```cpp
-TEST(FactorialTest, HandlesPositiveInput) {
-  EXPECT_EQ(Factorial(1), 1);
-  EXPECT_EQ(Factorial(3), 6) << "Factorial of 3 should be 6";
+  EXPECT_TRUE(IsPositive(result));
+  EXPECT_FALSE(IsNegative(result));
 }
 ```
 
-### Floating-Point Assertion Example
+### Using EXPECT_THAT with Matchers
+
 ```cpp
-TEST(MathTest, ApproximatelyEqual) {
-  EXPECT_FLOAT_EQ(3.14f, CalculatePiApprox());
-  EXPECT_NEAR(CalculatePiApprox(), 3.14159f, 0.0001f);
+#include <gmock/gmock.h>
+using ::testing::StartsWith;
+using ::testing::MatchesRegex;
+using ::testing::AllOf;
+using ::testing::Gt;
+using ::testing::Lt;
+
+TEST(ValidationTest, StringAndNumberMatchers) {
+  std::string greeting = GetGreeting();
+  int value = GetValue();
+
+  EXPECT_THAT(greeting, StartsWith("Hello"));
+  EXPECT_THAT(greeting, MatchesRegex("Hello, [A-Za-z]+!"));
+
+  EXPECT_THAT(value, AllOf(Gt(5), Lt(10)));
 }
 ```
 
-### Exception Assertion Example
+### Exception Assertions
+
 ```cpp
-TEST(ExceptionTest, ThrowsExpected) {
-  EXPECT_THROW(MyFunctionThatThrows(), std::runtime_error);
-  EXPECT_NO_THROW(FunctionThatDoesNotThrow());
+TEST(ExceptionTest, ThrowsOnInvalidInput) {
+  EXPECT_THROW(DoSomething(-1), std::invalid_argument);
+  EXPECT_ANY_THROW(DoOtherThing());
+  EXPECT_NO_THROW(DoSafeThing());
 }
 ```
 
-### Predicate Assertion Example
+### Death Test Example
+
 ```cpp
-bool IsPositive(int n) { return n > 0; }
-TEST(PredicateTest, PositiveCheck) {
-  EXPECT_PRED1(IsPositive, value);
+TEST(FatalTest, DeathOnInvalidConfig) {
+  EXPECT_DEATH(SetupConfig("bad.cfg"), "Invalid configuration");
 }
 ```
 
 ---
 
-## Troubleshooting
+## Troubleshooting and Tips
 
-- **Unexpected assertion failures**: Check that arguments are evaluated exactly once and have expected values.
-- **Compile errors on assertions**: Verify that arguments to macros match expected call signatures, especially for `ASSERT_*` fatal assertions.
-- **Incorrect string comparison results**: Use `EXPECT_STREQ` for C strings, not `EXPECT_EQ`.
-- **Flaky floating-point comparisons**: Use appropriate ULP-based or near comparison macros.
-- **Fatal assertion inside non-void function causes compile errors**: refactor to return void or use non-fatal assertions.
-
-
-## Related Documentation
-
-- [Assertions Reference](reference/assertions.md) for full list of assertion macros.
-- [Writing and Structuring Tests](guides/writing-and-structuring-tests/assertions-and-matchers.md) for guidance on idiomatic usage.
-- [Advanced Topics](docs/advanced.md#assertions) for predicate assertions and advanced usage.
-- [GoogleMock Integration](api-reference/mocking-actions-matchers/mock-objects-and-methods) for mixing assertions with mocks.
+- When your test fails with unclear error messages, consider replacing binary assertions with matcher-based assertions for richer diagnostics.
+- Use the streaming operator `<<` following assertions for custom messages to clarify intent.
+- Avoid relying on pointer equality unless explicitly testing pointers; use string or container matchers for content.
+- For floating-point values, avoid direct equality; use `EXPECT_FLOAT_EQ` or `EXPECT_NEAR`.
+- Remember that `ASSERT_` macros abort the current function immediately, so place them where a failure blocks subsequent valid operations.
+- When writing death tests, ensure the tested code actually terminates the process to prevent hangs.
 
 ---
 
-For the complete and latest API details and examples, refer to the official GoogleTest repository or online documentation.
+## See Also
+
+- [Matchers Reference](reference/matchers.md) – Extensive list of built-in matchers and guidelines for creating custom ones.
+- [gMock Cookbook](docs/gmock_cook_book.md) – Recipes for advanced assertion and mocking patterns.
+- [GoogleTest Primer](guides/getting-started/writing-your-first-test.mdx) – Introduction to writing GoogleTest tests.
+- [Effective Assertions Guide](guides/testing-patterns/effective-assertions.mdx) – Best practices for using assertions effectively.
+
+---
+
+## Related Navigation
+
+You can find this documentation under **API Reference > Core Testing API > Assertions and Expectation Macros**. For related information and other key GoogleTest components, see:
+
+- [Test Fixtures and Test Cases](api-reference/core-testing-api/test-fixtures-api.mdx)
+- [Mock Class and Method APIs](api-reference/mocking-and-matcher-api/mock-methods-api.mdx)
+- [Matchers Reference](api-reference/mocking-and-matcher-api/matchers-api.mdx)
+
+
+---
+
+For comprehensive guidance, review the associated guides and tutorials on GoogleTest and GoogleMock usage to deepen your testing proficiency and promote maintainable, robust C++ tests.
